fix: z-index on selector

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,7 +16,7 @@
     --accentcolor: #fc9126;
     --appbackground: #f3c599;
     --apptextcolor: #fff;
-    --apptextcolordark: rgb(29, 29, 29);
+    --apptextcolordark: rgb(88, 88, 88);
     --cardgreydark: #4e4e4e;
     --cardgreymid: #ececec;
     --cardgreylight: #f9f8f7;
